deploy: 32468b35e9c6c146539e823ba0e00e052f98ce19

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         }
       }
     </style>
-    <script type="module" crossorigin src="./js/index-C37KLwzZ.js"></script>
+    <script type="module" crossorigin src="./js/index-BeAh7h96.js"></script>
     <link rel="modulepreload" crossorigin href="./js/vendor-BfAx1WYe.js">
     <link rel="modulepreload" crossorigin href="./js/common-D4LVS5-6.js">
     <link rel="modulepreload" crossorigin href="./js/other-Ddu8NbEx.js">
