--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         }
       }
     </style>
-    <script type="module" crossorigin src="./js/index-RC6XUw8r.js"></script>
+    <script type="module" crossorigin src="./js/index-CHvF0hrt.js"></script>
     <link rel="modulepreload" crossorigin href="./js/vendor-BfAx1WYe.js">
     <link rel="modulepreload" crossorigin href="./js/common-D4LVS5-6.js">
     <link rel="modulepreload" crossorigin href="./js/other-Ddu8NbEx.js">
