--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         }
       }
     </style>
-    <script type="module" crossorigin src="./js/index-CfogcuMD.js"></script>
+    <script type="module" crossorigin src="./js/index-BH81hP8v.js"></script>
     <link rel="modulepreload" crossorigin href="./js/vendor-BfAx1WYe.js">
     <link rel="modulepreload" crossorigin href="./js/common-CuABYXE9.js">
     <link rel="modulepreload" crossorigin href="./js/other-C6F-4WeT.js">
